fixes overlapping graphs bug

--- a/source/public/css/application.css
+++ b/source/public/css/application.css
@@ -30,3 +30,7 @@ th {
 .x.axis path {
   display: none;
 }
+
+.question-id {
+  visibility: hidden;
+}
